Updated intro text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-7">
               <p>
-                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. I'm also researching causal machine learning with <a href='http://www.babylonhealth.com'>Babylon Health</a>. Previously, I was an AI resident at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems.
+                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. Recently, I researched causal machine learning at <a href='http://www.babylonhealth.com'>Babylon Health</a> and helped build a new machine learning moonshot at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems. <b>I'm now exploring post-PhD opportunities.</b>
               </p>
               <p>
                 I research how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
@@ -55,7 +55,7 @@
               </p>
               <p>
                 I'm an entrepreneur, salsa dancer, and rower. I started and ran
-                <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
+                <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I helped launch
                 <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
                 a
                 <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
@@ -65,10 +65,10 @@
                 <a href="/blog" class="read-more">I write some things here →</a> and here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
-                <b>Reading topics of the month:</b> Environment, Indigeneous issues, and systems change.
-                Currently reading <em><a href="https://www.goodreads.com/book/show/15797661-the-once-and-future-world">The Once and Future World</a></em>,
-                <em><a href="https://www.goodreads.com/book/show/15797509-the-inconvenient-indian">The Inconvenient Indian</a></em>,
-                and <em><a href="https://www.goodreads.com/book/show/3828902-thinking-in-systems">Thinking in Systems</a></em>
+                <b>Reading topics of the month:</b> Civilization, Imagination.
+                Currently reading <em><a href="https://www.goodreads.com/book/show/53981.The_Great_Transformation">The Great Transformation</a></em>,
+                <em><a href="https://www.goodreads.com/book/show/991681.The_Evolution_of_Civilizations">The Evolution of Civilizations</a></em>,
+                and <em><a href="https://www.goodreads.com/book/show/40775123-women-invent-the-future">Women Invent the Future.</a></em>
               </p>
             </div>
           </div>
