Update index page June 2020

--- a/index.html
+++ b/index.html
@@ -46,15 +46,19 @@
             </div>
             <div class="col-md-7">
               <p>
-                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. Recently, I researched causal machine learning at <a href='http://www.babylonhealth.com'>Babylon Health</a> and helped build a new machine learning moonshot at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems. <b>I'm now exploring post-PhD opportunities.</b>
+                I just completed my PhD with the Machine Learning Research Group at the University of Oxford, where I studied as a Rhodes Scholar. I'm now focused on using causal machine learning to model complex problems. My guiding vision is a high-growth, sustainable, equitable world for all. I'd really like to automate science and the economy. <a href="https://www.twitter.com/logangraham">You can find me on Twitter.</a>
+            </p>
+
+            <p>
+                Previously, I researched causal machine learning at <a href='http://www.babylonhealth.com'>Babylon Health</a> and helped build a new machine learning moonshot at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory.
+                My research focuses on how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
               </p>
-              <p>
-                I research how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
-              </p>
+
               <p> I've also researched the future of jobs, using machine learning to predict what tasks and occupations can be automated. <a href='/papers'>I curate interesting papers here</a> – you might like them.
               </p>
+              
               <p>
-                I'm an entrepreneur, salsa dancer, and rower. I started and ran
+                In the past I've been an entrepreneur, salsa dancer, and rower. I started and ran
                 <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I helped launch
                 <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
                 a
@@ -65,9 +69,7 @@
                 <a href="/blog" class="read-more">I write some things here →</a> and here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
-                <b>Reading topics of the month:</b> Civilization, Imagination.
-                Currently reading <em><a href="https://www.goodreads.com/book/show/53981.The_Great_Transformation">The Great Transformation</a></em>,
-                <em><a href="https://www.goodreads.com/book/show/991681.The_Evolution_of_Civilizations">The Evolution of Civilizations</a></em>,
+                <b>Reading topic of the month:</b> the bright future we should make. Currently reading <em><a href="https://www.goodreads.com/book/show/33517544-the-will-to-battle">The Will to Battle</a>
                 and <em><a href="https://www.goodreads.com/book/show/40775123-women-invent-the-future">Women Invent the Future.</a></em>
               </p>
             </div>
