--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
                 <p class="description">
                 Logan Graham</p>
                 <p class="text-center groups-inner groups-text">
-                  <a href="mailto:logan@robots.ox.ac.uk" class="read-more"> Email</a> |
-                  <a href="https://www.linkedin.com/in/logangraham" class="read-more">LinkedIn</a> |
-                  <a href="http://www.logangraham.xyz/bio.html" class="read-more">Full Bio</a> </p>
+                  <a href="mailto:logancgraham@gmail.com" class="read-more"> email</a> |
+                  <a href="https://www.linkedin.com/in/logangraham" class="read-more">linkedin</a>
               </div>
             </div>
             <div class="col-md-7">
@@ -51,10 +50,10 @@
 
             <p>
                 Previously, I researched causal machine learning at <a href='http://www.babylonhealth.com'>Babylon Health</a> and helped build a new machine learning moonshot at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory.
-                My research focuses on how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
+                My research focuses on how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; improving interpretability; and deploying machine learning to safety-critical human-use situations. I've also researched the future of jobs, using machine learning to predict what tasks and occupations can be automated.
               </p>
 
-              <p> I've also researched the future of jobs, using machine learning to predict what tasks and occupations can be automated. <a href='/papers'>I curate interesting papers here</a> – you might like them.
+              <p><a href='/papers'>I curate interesting papers here</a> – you might like them.
               </p>
               
               <p>
@@ -69,8 +68,8 @@
                 <a href="/blog" class="read-more">I write some things here →</a> and here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
-                <b>Reading topic of the month:</b> the bright future we should make. Currently reading <em><a href="https://www.goodreads.com/book/show/33517544-the-will-to-battle">The Will to Battle</a>
-                and <em><a href="https://www.goodreads.com/book/show/40775123-women-invent-the-future">Women Invent the Future.</a></em>
+                <b>Reading topic of the month:</b> potpourri. Currently reading <em><a href="https://www.goodreads.com/book/show/25853028-for-two-thousand-years">For Two Thousand Years</a>
+                and <em><a href="https://www.goodreads.com/book/show/153954.The_Human_Use_of_Human_Beings">The Human use of Human Beings.</a></em>
               </p>
             </div>
           </div>
