--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
               </div>
             </div>
             <div class="col-md-7">
-              <p>
-                I just completed my PhD with the Machine Learning Research Group at the University of Oxford, where I studied as a Rhodes Scholar. I'm now focused on using causal machine learning to model complex problems. My guiding vision is a high-growth, sustainable, equitable world for all. I'd really like to automate science and the economy. <a href="https://www.twitter.com/logangraham">You can find me on Twitter.</a>
-            </p>
+              <p>I work on science & technology strategy in the Prime Minister's office in the UK. Recently, I completed a PhD at the Machine Learning Research Group at the University of Oxford as a Rhodes Scholar. I researched causal and interpretable machine learning. My guiding vision is a high-growth, sustainable, equitable world for all. I'd really like to automate science and the economy. <a href="https://www.twitter.com/logangraham">You can find me on Twitter.</a>
+              </p>
 
             <p>
-                Previously, I researched causal machine learning at <a href='http://www.babylonhealth.com'>Babylon Health</a> and helped build a new machine learning moonshot at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory.
-                My research focuses on how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; improving interpretability; and deploying machine learning to safety-critical human-use situations. I've also researched the future of jobs, using machine learning to predict what tasks and occupations can be automated.
+                Previously, I researched causal machine learning at <a href='http://www.babylonhealth.com'>Babylon Health</a> and helped build a new ML + bio moonshot at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory.
               </p>
 
               <p><a href='/papers'>I curate interesting papers here</a> – you might like them.
@@ -58,7 +56,7 @@
               
               <p>
                 In the past I've been an entrepreneur, salsa dancer, and rower. I started and ran
-                <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I helped launch
+                <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL,</a> helped launch
                 <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
                 a
                 <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
@@ -68,7 +66,7 @@
                 <a href="/blog" class="read-more">I write some things here →</a> and here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
-                <b>Reading topic of the month:</b> potpourri. Currently reading <em><a href="https://www.goodreads.com/book/show/25853028-for-two-thousand-years">For Two Thousand Years</a>
+                <b>Reading topic of the month:</b> potpourri. Currently reading <em>A Fire Upon the Deep</a>
                 and <em><a href="https://www.goodreads.com/book/show/153954.The_Human_Use_of_Human_Beings">The Human use of Human Beings.</a></em>
               </p>
             </div>
