Misplace href tag

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="/blog" class="read-more">I write some things here →</a> and here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
-                <b>Reading topic of the month:</b> potpourri. Currently reading <em>A Fire Upon the Deep</a>
+                <b>Reading topic of the month:</b> potpourri. Currently reading <em>A Fire Upon the Deep</em>
                 and <em><a href="https://www.goodreads.com/book/show/153954.The_Human_Use_of_Human_Beings">The Human use of Human Beings.</a></em>
               </p>
             </div>
