--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
               </div>
             </div>
             <div class="col-md-7">
-              <p>Until recently, I was the Prime Minister's Special Adviser in the UK. I worked on science and tech, like setting up a new <a href="https://aria.org.uk">ARPA</a>, doing <a href="https://www.gov.uk/government/publications/national-ai-strategy">good stuff on AI</a>, and becoming a <a href="https://www.gov.uk/government/news/government-announces-plans-for-largest-ever-rd-budget">Science Superpower</a>. Importantly, I tried to prevent existential risks.</p
+              <p>Until recently, I was the Prime Minister's Special Adviser in the UK. I worked on science and tech, like setting up a new <a href="https://aria.org.uk">ARPA</a>, doing <a href="https://www.gov.uk/government/publications/national-ai-strategy">good stuff on AI</a>, and becoming a <a href="https://www.gov.uk/government/news/government-announces-plans-for-largest-ever-rd-budget">Science Superpower</a>. Importantly, I tried to prevent extreme risks.</p
                 
-               <p> Before that I did a PhD at the Machine Learning Research Group at the University of Oxford as a Rhodes Scholar. I researched causal and interpretable machine learning at <a href='http://www.x.company'>X</a>, Google's moonshot lab, and <a href='http://www.babylonhealth.com'>Babylon Health</a>. My guiding vision is a high-growth, sustainable, equitable world for all. I'd really like to automate science and the economy. But I don't want humans to go extinct. <a href="https://www.twitter.com/logangraham">You can find me on Twitter.</a>
+               <p> Before that I did a PhD at the Machine Learning Research Group at the University of Oxford as a Rhodes Scholar. I researched causal and interpretable machine learning at <a href='http://www.x.company'>X</a>, Google's moonshot lab, and <a href='http://www.babylonhealth.com'>Babylon Health</a>. My guiding vision is a high-growth, sustainable, equitable world for all. I'd really like to automate science and the economy. <a href="https://www.twitter.com/logangraham">You can find me on Twitter.</a>
               </p>
               <p>I'm exploring new things. Get in touch.</p>
               
