--- a/index.html
+++ b/index.html
@@ -54,18 +54,19 @@
     <div class="container">
         <div class="main-content">
             <h2>Logan Graham</h2>
-            <p>I lead the Frontier Red Team at Anthropic. Our mission is to find out the most advanced and possibly risky capabilities of AGI, as far ahead as possible.</p>
-            <p>Before that, I was the Prime Minister's Special Adviser on science and technology in the UK. We made AI a national priority, created ARIA, allocated billions to science, brought a startup approach to No10, and worked to prevent the largest national security risks. I also helped build a moonshot at Google X and did a PhD in machine learning at Oxford.</li>
+            <p>I lead the Frontier Red Team at Anthropic. Our mission is to discover the most advanced (and possibly risky) capabilities of AGI, as far ahead as possible. We try to make our models do magic.</p>
+            <p>Before that, I was the Prime Minister's Special Adviser on science and technology in the UK. The basic idea was to build a country for the 22nd century -- change the structures of the state to cause new industrial revolutions. We made AI a national priority, created <a href="https://www.aria.org.uk/">ARIA</a>, allocated billions to science, made the Prime Minister's office a startup, and worked to prevent the largest national security risks. I learned a lot about the importance of extreme talent, the 'system', and the state of the world. I also helped build a moonshot at Google X and did a PhD in machine learning at Oxford.</li>
             </ul>
             <p>Some of my core beliefs:</p>
             <ul>
                 <li>Prepare for AGI.</li>
-                <li>The human project is not over until every single person lives a flourishing life.</li>
                 <li><a href="https://en.wikipedia.org/wiki/The_purpose_of_a_system_is_what_it_does">POSIWID.</a></li>
-                <li>People, especially young people, are capable of extraordinary things.</li>
+                <li>Accelerating science >>> almost everything else.</li>
                 <li>There are no “adults in the room”; you are the adults; there is no room; this is the state of the world.</li>
+                <li>People, especially young people, are capable of extraordinary things.</li>
+                <li>The human project is not over until every single person lives a flourishing life.</li>
             </ul>            
-            <p>Find me <a href="https://x.com/logangraham">@logangraham</a> on Twitter, on <a href="https://linkedin.com/in/logangraham">LinkedIn</a>, or email [firstname]c[lastname]@gmail.com.</p>
+            <p>Find me <a href="https://x.com/logangraham">@logangraham</a> on Twitter, on <a href="https://linkedin.com/in/logangraham">linkedin</a>, or email [firstname]c[lastname]@gmail.com.</p>
 
         </div>
     </div>
