--- a/universal.html
+++ b/universal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Blog Post</title>
+    <title>Universal truths after government</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
@@ -88,6 +88,7 @@
             <p>Government is downside minimization not upside maximization.</p>
             <p>The characteristic timescale is about 3 months, and then it becomes about whenever an election is salient.</p>
             <p>The political advisors >>> the idea advisors.</p>
+            <p>Government would deliver more if it were half the size, and this is likely 0.5 - 1 OOM too large still.</p>
         </div>
     </div>
 </body>
