--- a/index.html
+++ b/index.html
@@ -7,48 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "EB Garamond", Times, serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            color: #333; /* Set a base text color */
-            background-color: #ffffff; /* Set a base background color */
-        }
-        .container {
-            width: 60%;
-            max-width: 1200px;
-            min-width: 300px;
-            padding: 20px;
-        }
-        .main-content {
-            width: 100%;
-            text-align: left;
-        }
-        a {
-            color: inherit;
-            text-decoration: underline !important; /* Add !important to override any conflicting styles */
-            transition: all 0.3s ease;
-        }
-        a:hover {
-            color: #fff;
-            background-color: #333;
-            text-decoration: none !important; /* Keep the hover effect without underline */
-        }
-        @media (max-width: 800px) {
-            .container {
-                width: calc(90% - 150px * (100vw - 400px) / 400);
-            }
-        }
-        @media (max-width: 400px) {
-            .container {
-                width: 90%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles/common.css">
 </head>
 <body>
     <div class="container">
