--- a/universal.html
+++ b/universal.html
@@ -7,88 +7,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "EB Garamond", Times, serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            color: #333;
-            background-color: #fff;
-        }
-        .container {
-            width: 50%;
-            max-width: 800px;
-            padding: 20px;
-        }
-        .main-content {
-            width: 100%;
-            text-align: left;
-        }
-        a {
-            color: inherit;
-            text-decoration: underline;
-            transition: all 0.3s ease;
-        }
-        a:hover {
-            color: #fff;
-            background-color: #333;
-            text-decoration: none;
-        }
-        .home-button {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            padding: 5px 10px;
-            text-decoration: none;
-            border: 1px solid #333;
-        }
-        @media (max-width: 768px) {
-            .container {
-                padding: 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
     <a href="index.html" class="home-button">Home</a>
     <div class="container">
         <div class="main-content">
             <h1>Universal truths after government</h1>
-            <p>November 9, 2024</p>
+            <p>November 13, 2024</p>
             <br>
             <p style="text-align: right;"><i>"The machinery of government is always subordinate to the will of those who administer that machinery."</i></p>
-            <p style="text-align: right;">- The Spacing Guild Manual, the Dune trilogy</p>
+            <p style="text-align: right;">- The Spacing Guild Manual, Dune</p>
             <br>
             <p style="text-align: right;"><i>"¡Vive la libertad carajo!"</i></p>
             <p style="text-align: right;">- Javier Milei</p>
             <br>
             <p>Come hopeful, leave libertarian.</p>
-            <p>Nobody has the data or model you're looking for. It doesn't exist.</p>
-            <p>"There must be another room, somewhere down the hall, where the real meeting is happening, where the real experts are, making the real decisions. Because it can’t just be us. It can’t just be this. You know what? Turns out that it is.” -- Jake Sullivan</p>
+            <p>Good ideas are abundant, execution is scarce.</p>
+            <p>DOGE is probably a very good idea.</p>
+            <p>"There must be another room, somewhere down the hall, where the real meeting is happening, where the real experts are, making the real decisions. Because it can’t just be us. It can’t just be this. You know what? Turns out that it is.” - Jake Sullivan</p>
             <p>There are no adults. There is no room. There's not even a door.</p>
-            <p>Government is the best example we have of alignment of a misaligned AGI.</p>
-            <p>Real government runs on WhatsApp, Signal, and iMessage.</p>
-            <p>The shortage of talent is remarkable. Several centuries of training hundreds of thousands of people for the previous century.</p>
+            <p>Government is the best example we have of a misaligned superintelligence.</p>
+            <p>Real government is on WhatsApp, Signal, and iMessage.</p>
             <p>Media over elections, elections over substance.</p>
             <p>The iron law: eventually, government will do the exact opposite of the most productive thing.</p>
-            <p>It regularly chooses to kill its most productive components.</p>
-            <p>Ignore most crises.</p>
-            <p>You can't afford to ignore the small number of big things.</p>
-            <p>Most people pay attention to the crises and ignore the big things.</p>
+            <p>Government regularly chooses to kill its most productive components.</p>
+            <p>You should ignore most crises.</p>
+            <p>You can't afford to ignore a small number of big things (like inflation or immigration).</p>
+            <p>Most people pay attention to the crises, and ignore the big things.</p>
             <p>Those people lose elections.</p>
-            <p>The deep state is real and exists in a superposition of good and evil.</p>
-            <p>Good ideas are abundant, execution is scarce.</p>
+            <p>The deep state is real and exists in a superposition of good and evil depending on what you're trying to do.</p>
+            <p>Nobody has the data or model you're looking for. It doesn't exist.</p>
             <p>Everyone wants an empire of money or reputation.</p>
             <p>The game is to capture the interest and will of the principal.</p>
             <p>Government is about information processing; in the limit, this is a technology problem; cybernetics was right.</p>
-            <p>Government is a management problem and no one knows how to manage, and all the structures are built to remove effective management.</p>
-            <p>Government is downside minimization not upside maximization.</p>
+            <p>Government is a management problem. No one knows how to manage. Politics and civil service don't select for effective management. They put processes in place that make it harder to manage.</p>
+            <p>Government is downside minimization. Government is not upside maximization.</p>
+            <p>Talent is rare. You find it in the special forces, and random offices you've never heard of. The problem is the people government has been training for centuries are the wrong people for the 21st century.</p>
             <p>The characteristic timescale is about 3 months, and then it becomes about whenever an election is salient.</p>
             <p>The political advisors >>> the idea advisors.</p>
             <p>Government would deliver more if it were half the size, and this is likely 0.5 - 1 OOM too large still.</p>
+            <p>Most civil servants agree with the above, but they can't say it.</p>
+            <br>
+            <p><i>My friends, across the executive branches of four countries, and across ideologies, agreed with me on these lessons.</i></p>
         </div>
     </div>
 </body>
