--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/common.css">
+    <script src="scripts/darkMode.js"></script>
 </head>
 <body>
+    <header class="site-header">
+        <nav>
+            <button id="dark-mode-toggle" class="toggle-button"></button>
+        </nav>
+    </header>
+    <!-- <button id="dark-mode-toggle" class="toggle-button"></button> -->
     <div class="container">
         <div class="main-content">
             <h2>Logan Graham</h2>
