--- a/universal.html
+++ b/universal.html
@@ -9,9 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/blog.css">
+    <script src="scripts/darkMode.js"></script>
 </head>
 <body>
-    <a href="index.html" class="home-button">Home</a>
+    <header class="site-header">
+        <nav>
+            <a href="/" class="nav-link">Home</a>
+            <button id="dark-mode-toggle" class="toggle-button"></button>
+        </nav>
+    </header>
     <div class="container">
         <div class="main-content">
             <h1>Universal truths after government</h1>
