minor qualia edits

--- a/qualia.html
+++ b/qualia.html
@@ -30,8 +30,8 @@
             <br>
             <p style="text-align: right;"><i>Ranked not by pleasantness, but intensity</i></p>
             <br>
-            <p>The sauna-to-frozen-river plunge circuit at Bota Bota in Montreal.</p>
-            <p>Rowing a sprint piece in perfect sync with the 8 other guys at 5:30am in Oxford.</p>
+            <p>The sauna-to-frozen-river plunge circuit at Bota Bota in Montreal with my best friend.</p>
+            <p>Rowing a sprint piece perfectly in sync with the 8 other guys at 5:30am in Oxford.</p>
             <p>A perfect full-sun <a href="https://maps.app.goo.gl/zFUv1d5UrqQsSCpg9">hike & swim</a> day during the Covid summer with 20 close friends.</p>
             <p>The feeling of death and accomplishment after showing up to my first CrossFit class and realizing it's the first day of the CrossFit Open.</p>
             <p>The moment of producing The One Graph that showed Omicron either meant the end of the pandemic or the beginning of system collapse.</p>
