--- a/qualia.html
+++ b/qualia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal truths after government</title>
+    <title>Qualia rankings</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
@@ -23,7 +23,7 @@
     </header>
     <div class="container">
         <div class="main-content">
-            <h1>Qualia ranking</h1>
+            <h1>Qualia rankings</h1>
             <p>February 1, 2025</p>
             <br>
             <p style="text-align: right;">It feels important to catalogue your experiences that really got at the feeling of being alive. The experiences in this list all had something <i>distinct</i> about them, a sort of intensity.</p>
