--- a/qualia.html
+++ b/qualia.html
@@ -26,7 +26,7 @@
             <h1>Qualia rankings</h1>
             <p>February 1, 2025</p>
             <br>
-            <p style="text-align: right;">It feels important to catalogue your experiences that really got at the feeling of being alive. The experiences in this list all had something <i>distinct</i> about them, a sort of intensity.</p>
+            <p style="text-align: right;">It feels important to catalogue your experiences that really activate the feeling of being alive, for better or for worse. The experiences in this list all had something <i>distinct</i> about them, a sort of intensity.</p>
             <br>
             <p style="text-align: right;"><i>Ranked not by pleasantness, but intensity</i></p>
             <br>
@@ -39,7 +39,7 @@
             <p>Aerobatic turns while paragliding <a href="https://en.wikipedia.org/wiki/%C3%96l%C3%BCdeniz">in Turkey</a>.</p>
             <p>An impressively full-pressure rain shower a New York hotel after a long run in sub-freezing temperatures.</p>
             <p>Thrill after skiing my first <a href="https://openskimap.org/?obj=369197197e8a506f2cef4d1eb36a30418302f7a5#12.5/50.08522/-122.95823">black run</a> in Whistler.</p>
-            <p>Seeing a wedding party emerge from the dust storm at Burning Man.</p>
+            <p>Seeing a wedding party emerge from a dust storm at Burning Man.</p>
             <p>The chest-throttling sound of a F-22 Raptor above my head <a href="https://en.wikipedia.org/wiki/Fleet_Week#San_Francisco">on the rooftop</a> of my sister's apartment.</p>
             <p>The taste of a $200 bottle of wine in an "inexpensive student wine bar" in Paris selected by a friend from Bordeaux.</p>
             <p>Being slightly drunk on the subway after the Paris wine bar.</p>
