--- a/qualia.html
+++ b/qualia.html
@@ -47,7 +47,7 @@
             <p>Reading two or three chapter-concluding sentences in Richard Rhodes' The Making of the Atomic Bomb that have no right to be as beautiful as he wrote them.</p>
             <p>Tipsy whispering at <a href="https://maps.app.goo.gl/W9FRhgS97NW2EeT16">Burp Castle</a> with friends.</p>
             <p>Walking the streets of New York.</p>
-            <p>The 10th StarCraft loss in a row, playing with friends, when a sort of learned helplessness kicks in.</p>
+            <p>The 10th StarCraft 2 loss in a row, playing with friends, when a sort of learned helplessness kicks in.</p>
             <p>Crying at the climax of One Second After at 2 A.M.</p>
             <p>Seeing the buildings of Oxford on my first day as a grad student.</p>
             <p>A brief moment during an astral projection meditation.</p>
